--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.11.0",
     "reflect-metadata": "^0.2.2",
+    "rss-parser": "^3.13.0",
     "rxjs": "^7.8.1",
     "sqlite3": "^5.1.7",
     "typeorm": "^0.3.25"
